icon alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -1423,7 +1423,7 @@ header {
   }
 }
 
-.main-page .message.m-visible {
+.main-page .message.m-visible, .page-container .m-visible .message  {
   display: flex;
   align-items: flex-start;
 }
